data/derived/fa15/progs/unify/prog0721.ml.out
Characters 50-62:
  if n < 0 then [] else []@[(n mod 10)] digitsOfInt n/10;;
                           ^^^^^^^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
